<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ADISys Mobile</string>
    <string name="ok">Ok</string>
    <string name="select_file">Seleziona pianificazione</string>
    <string name="back">Indietro</string>
    <string name="exit">Esci</string>
    <string name="select_intervention">Seleziona intervento</string>
    <string name="patient">paziente</string>
    <string name="intervention_title">Intervento</string>
    <string name="details">Dettagli</string>
    <string name="operation_list">Lista operazioni</string>
    <string name="execute_intervention">Esegui Intervento</string>
    <string name="id">ID</string>
    <string name="city">Città</string>
    <string name="zip_code">CAP</string>
    <string name="address">Indirizzo</string>
    <string name="date">Data</string>
    <string name="time">Ora</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="birth_date">Data</string>
    <string name="phone_numbers">Numeri telefonici</string>
    <string name="patient_title">Paziente</string>
    <string name="nurse_title">Infermiere</string>
    <string name="finish_intervention">Finisci intervento</string>
    <string name="abort_intervention">Annulla intervento</string>
    <string name="insert_values">Inserisci valori</string>
    <string name="operation_name">Nome</string>
    <string name="note">Nota</string>
    <string name="derived_value">Valore rilevato</string>
    <string name="elapsed_time">Tempo</string>
    <string name="confirm">Conferma</string>
    <string name="home">Home</string>
    <string name="intervention_finished_successfully">Intervento completato con successo!</string>
    <string name="suffering_diseases">Patologie sofferte</string>
    <string name="disease_to_cure">Patologie da curare</string>
    <string name="disease_header">(codice, nome, gravità)</string>
</resources>
